--- a/map/res/values/strings.xml
+++ b/map/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">map</string>
+    <string name="app_name">滴滴</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 	<string name="sate">卫星图</string>
